--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ include = ["ultima_scraper_renamer/py.typed"]
 python = "^3.10"
 tqdm = "^4.64.1"
 orjson = "^3.8.3"
-ultima-scraper-api = "^0.0.1.5"
+ultima-scraper-api = "0.0.1.9"
 
 
 [build-system]
