--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "ultima-scraper-renamer"
-version = "0.0.4"
+version = "0.0.5"
 description = ""
 authors = ["DIGITALCRIMINALS <89371864+DIGITALCRIMINALS@users.noreply.github.com>"]
 readme = "README.md"
@@ -11,7 +11,7 @@ include = ["ultima_scraper_renamer/py.typed"]
 python = "^3.10"
 tqdm = "^4.64.1"
 orjson = "^3.8.3"
-ultima-scraper-api = "0.0.1.9"
+ultima-scraper-api = "^0.0.2.0"
 
 
 [build-system]
