--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,10 @@
 [tool.poetry]
 name = "ultima-scraper-renamer"
-version = "0.0.5"
+version = "0.0.6"
 description = ""
-authors = ["DIGITALCRIMINALS <89371864+DIGITALCRIMINALS@users.noreply.github.com>"]
+authors = [
+    "DIGITALCRIMINALS <89371864+digitalcriminals@users.noreply.github.com>",
+]
 readme = "README.md"
 packages = [{include = "ultima_scraper_renamer"}]
 include = ["ultima_scraper_renamer/py.typed"]
@@ -11,7 +13,9 @@ include = ["ultima_scraper_renamer/py.typed"]
 python = "^3.10"
 tqdm = "^4.64.1"
 orjson = "^3.8.3"
-ultima-scraper-api = "^0.0.2.0"
+ultima-scraper-api = "0.0.2.4"
+ultima-scraper-collection = "0.0.0.1"
+
 
 
 [build-system]
