--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "ultima-scraper-renamer"
-version = "0.1.0"
+version = "0.1.1"
 description = ""
 authors = [
     "DIGITALCRIMINALS <89371864+digitalcriminals@users.noreply.github.com>",
@@ -13,13 +13,16 @@ include = ["ultima_scraper_renamer/py.typed"]
 python = "^3.10"
 tqdm = "^4.64.1"
 orjson = "^3.8.3"
-ultima-scraper-api = "0.0.3"
+ultima-scraper-api = "^0.0.4"
 ultima-scraper-collection = "^0.0.1"
 
 
 
 [tool.poetry.group.dev.dependencies]
 python-semantic-release = "^7.33.2"
+
+[tool.semantic_release]
+version_toml = "pyproject.toml:tool.poetry.version"
 
 [build-system]
 requires = ["poetry-core"]
