--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "ultima-scraper-renamer"
-version = "1.0.0"
+version = "1.1.0"
 description = ""
 authors = [
     "DIGITALCRIMINALS <89371864+digitalcriminals@users.noreply.github.com>",
@@ -10,11 +10,11 @@ packages = [{include = "ultima_scraper_renamer"}]
 include = ["ultima_scraper_renamer/py.typed"]
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = ">=3.10,<3.12"
 tqdm = "^4.64.1"
 orjson = "^3.8.3"
-ultima-scraper-api = "^1.0.0"
-ultima-scraper-collection = "^1.0.0"
+ultima-scraper-api = "^1.1.0"
+ultima-scraper-collection = "^1.1.0"
 
 
 
