--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,8 @@
 [tool.poetry]
 name = "ultima-scraper-renamer"
-version = "1.1.2"
+version = "1.1.3"
 description = ""
-authors = [
-    "DIGITALCRIMINALS <89371864+digitalcriminals@users.noreply.github.com>",
-]
+authors = ["CRIMINAL <89371864+DIGITALCRIMINALS@users.noreply.github.com>"]
 readme = "README.md"
 packages = [{include = "ultima_scraper_renamer"}]
 include = ["ultima_scraper_renamer/py.typed"]
@@ -14,7 +12,7 @@ python = ">=3.10,<3.12"
 tqdm = "^4.64.1"
 orjson = "^3.8.3"
 ultima-scraper-api = "^2.0.0"
-ultima-scraper-collection = "^1.1.0"
+ultima-scraper-collection = "^2.0.0"
 
 
 
