--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,10 @@
 [tool.poetry]
 name = "ultima-scraper-renamer"
-version = "1.1.3"
+version = "1.1.4"
 description = ""
-authors = ["CRIMINAL <89371864+DIGITALCRIMINALS@users.noreply.github.com>"]
+authors = [
+    "UltimaHoarder <1285176+UltimaHoarder@users.noreply.github.com>",
+]
 readme = "README.md"
 packages = [{include = "ultima_scraper_renamer"}]
 include = ["ultima_scraper_renamer/py.typed"]
